--- a/web_app/index.html
+++ b/web_app/index.html
@@ -2,6 +2,7 @@
 
 <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/freshfork/p5.EasyCam@1.0.10/p5.easycam.min.js"></script>
     <script src="sphere_demo2.js"></script>
 </head>
 
