--- a/web_app/index.html
+++ b/web_app/index.html
@@ -1,6 +1,9 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/freshfork/p5.EasyCam@1.0.10/p5.easycam.min.js"></script>
     <script src="sphere_demo2.js"></script>
@@ -8,13 +11,5 @@
 
 <body>
 </body>
-<style>
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
-    
-</style>
 
 </html>
