--- a/electron_webapp/public/index.html
+++ b/electron_webapp/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Virtual Cube</title>
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
+    <script language="javascript" type="text/javascript" src="libraries/p5.easycam.js"></script>
     <!-- uncomment lines below to include extra p5 libraries -->
     <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
     <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
