--- a/electron_webapp/public/index.html
+++ b/electron_webapp/public/index.html
@@ -5,12 +5,9 @@
     <title>Virtual Cube</title>
     <script language="javascript" type="text/javascript" src="libraries/p5.js"></script>
     <script language="javascript" type="text/javascript" src="libraries/p5.easycam.js"></script>
-    <!-- uncomment lines below to include extra p5 libraries -->
-    <!--<script language="javascript" src="libraries/p5.dom.js"></script>-->
-    <!--<script language="javascript" src="libraries/p5.sound.js"></script>-->
-    <!--<script language="javascript" type="text/javascript" src="sketch.js"></script>-->
+    <script language="javascript" src="libraries/p5.dom.js"></script>
+    <script language="javascript" src="libraries/p5.sound.js"></script>
     <script language="javascript" type="text/javascript" src="sphere_demo2.js"></script>
-    <!-- this line removes any default padding and style. you might only need one of these values set. -->
     <style> body {padding: 0; margin: 0; background: #000000; overflow-x:hidden; overflow-y: hidden} </style>
   </head>
   <body>
