--- a/web_app/index.html
+++ b/web_app/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/freshfork/p5.EasyCam@1.0.10/p5.easycam.min.js"></script>
-    <script src="visualization.js"></script>
-    <script src="sphere_demo2.js"></script>
+    <script src="visual.js"></script>
+    <script src="sphere_demo.js"></script>
 </head>
 
 <body>
