--- a/electron_webapp/public/index.html
+++ b/electron_webapp/public/index.html
@@ -7,7 +7,7 @@
     <script language="javascript" type="text/javascript" src="libraries/p5.easycam.js"></script>
     <script language="javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" src="libraries/p5.sound.js"></script>
-    <script language="javascript" type="text/javascript" src="sphere_demo2.js"></script>
+    <script language="javascript" type="text/javascript" src="sphere_demo_view.js"></script>
     <style> body {padding: 0; margin: 0; background: #000000; overflow-x:hidden; overflow-y: hidden} </style>
   </head>
   <body>
