add latest changes

--- a/web_app/index.html
+++ b/web_app/index.html
@@ -6,7 +6,11 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/freshfork/p5.EasyCam@1.0.10/p5.easycam.min.js"></script>
+
+    <!--For ML need ONNX.js-->
+    <script src="https://cdn.jsdelivr.net/npm/onnxjs/dist/onnx.min.js"></script>
     <script src="sphere_demo2.js"></script>
+    <script src="ml_process.js"></script>
 </head>
 
 <body>
