--- a/electron_webapp/public/index.html
+++ b/electron_webapp/public/index.html
@@ -7,6 +7,7 @@
     <script language="javascript" type="text/javascript" src="libraries/p5.easycam.js"></script>
     <script language="javascript" src="libraries/p5.dom.js"></script>
     <script language="javascript" src="libraries/p5.sound.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/onnxjs/dist/onnx.min.js"></script>
     <script language="javascript" type="text/javascript" src="sphere_demo_view.js"></script>
     <style> body {padding: 0; margin: 0; background: #000000; overflow-x:hidden; overflow-y: hidden} </style>
   </head>
@@ -15,7 +16,5 @@
   </body>
 
   <script>
-    // You can also require other files to run in this process
-    require('../renderer.js')
   </script>
 </html>
