--- a/web_app/index.html
+++ b/web_app/index.html
@@ -10,39 +10,38 @@
     <script src="sphere_demo.js"></script>
 </head>
 
-<body onload="getColor()">
+<body>
     <div class="container">
         <div id="mySidebar" class="sidebar">
             <label class="noteLabel">C</label>
             <input type="color" id="color0" name="color" onchange="handleChange(this.value, this.id)" />
             <label class="noteLabel">F#</label>
-            <input type="color" id="color6" name="color"
-                onchange="handleChange(this.value, this.id)" /><br />
+            <input type="color" id="color6" name="color" onchange="handleChange(this.value, this.id)" /><br />
             <label class="noteLabel">C#</label>
             <input type="color" id="color1" name="color" onchange="handleChange(this.value, this.id)" />
             <label class="noteLabel">G</label>
-            <input type="color" id="color7" name="color" 
-                onchange="handleChange(this.value, this.id)" /><br />
+            <input type="color" id="color7" name="color" onchange="handleChange(this.value, this.id)" /><br />
             <label class="noteLabel">D</label>
             <input type="color" id="color2" name="color" onchange="handleChange(this.value, this.id)" />
             <label class="noteLabel">G#</label>
-            <input type="color" id="color8" name="color" 
-                onchange="handleChange(this.value, this.id)" /><br />
+            <input type="color" id="color8" name="color" onchange="handleChange(this.value, this.id)" /><br />
             <label class="noteLabel">D#</label>
             <input type="color" id="color3" name="color" onchange="handleChange(this.value, this.id)" />
             <label class="noteLabel">A</label>
-            <input type="color" id="color9" name="color" 
-                onchange="handleChange(this.value, this.id)" /><br />
+            <input type="color" id="color9" name="color" onchange="handleChange(this.value, this.id)" /><br />
             <label class="noteLabel">E</label>
             <input type="color" id="color4" name="color" onchange="handleChange(this.value, this.id)" />
             <label class="noteLabel">A#</label>
-            <input type="color" id="color10" name="color" 
-                onchange="handleChange(this.value, this.id)" /><br />
+            <input type="color" id="color10" name="color" onchange="handleChange(this.value, this.id)" /><br />
             <label class="noteLabel">F</label>
             <input type="color" id="color5" name="color" onchange="handleChange(this.value, this.id)" />
             <label class="noteLabel">B</label>
-            <input type="color" id="color11" name="color"
-                onchange="handleChange(this.value, this.id)" /><br />
+            <input type="color" id="color11" name="color" onchange="handleChange(this.value, this.id)" /><br /><br />
+            <label class="switch" >
+                <input type="checkbox" onClick="toggleCustom()">
+                <span class="slider"></span>
+            </label>
+
         </div>
         <div id="btnContainer">
             <button onCLick="toggleNav()" class="toggleButton" id="arrow-left">></button>
