--- a/electron_webapp/public/index.html
+++ b/electron_webapp/public/index.html
@@ -14,9 +14,26 @@
     <script language="javascript" type="text/javascript" src="sphere_demo_model.js"></script>
     <!-- this line removes any default padding and style. you might only need one of these values set. -->
     <style> body {padding: 0; margin: 0; background: #000000; overflow-x:hidden; overflow-y: hidden} </style>
+        <style>
+        div.select {
+            display: inline-block;
+            margin: 0 0 1em 0;
+        }
+
+        p.small {
+            font-size: 0.7em;
+        }
+
+        label {
+            width: 12em;
+            display: inline-block;
+        }
+    </style>
   </head>
   <body>
-
+    <div class="select">
+        <label for="audioSource"> </label><select id="audioSource"></select>
+    </div>
   </body>
 
   <script>
